@@ -1,3 +1,10 @@
+2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* configure.in:
+	* src/plugins/tracker/totem-tracker-widget.c: (populate_result):
+	Convert the Tracker plugin to GIO and remove its dependency on
+	libgnomeui. (Closes: #512590)
+
 2008-03-14  Philip Withnall  <pwithnall@svn.gnome.org>
 
 	* configure.in:
